# quant

./: .gitignore  pyproject.toml
src/quant/mean_reverting/stock_pair/: bollinger_bands_log.ipynb  bollinger_bands_price.ipynb  kalman_chan.ipynb  kalman_rolling_mean.ipynb  positions.py
src/quant/mean_reverting/stock_pair/exp/: searching_pairs.ipynb  trading_pairs.ipynb
src/quant/utils/: cointegraion.py
