[project]
name = "quant"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitrii Falko",email = "dmitriy.falko@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.11"
dependencies = [
    "ipykernel (>=6.30.0,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "yfinance (>=0.2.65,<0.3.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "quantstats (>=0.0.69,<0.0.70)",
]

[tool.poetry]
packages = [{include = "quant", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
